--- a/style.css
+++ b/style.css
@@ -4,3 +4,11 @@
   justify-content: center;
   /* height: 100vh; */
 }
+
+.album {
+  white-space: pre-wrap; /* CSS3 */
+  white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
+  white-space: -pre-wrap; /* Opera 4-6 */
+  white-space: -o-pre-wrap; /* Opera 7 */
+  word-wrap: break-word; /* Internet Explorer 5.5+ */
+}
