--- a/style.css
+++ b/style.css
@@ -5,8 +5,7 @@
   /* height: 100vh; */
 }
 
-.album {
-  white-space: pre-wrap; /* CSS3 */
+.album2 {
   white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
   white-space: -pre-wrap; /* Opera 4-6 */
   white-space: -o-pre-wrap; /* Opera 7 */
