--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-.chart {
+/* .chart {
   display: flex;
   align-items: center;
   justify-content: center;
-  /* height: 100vh; */
-}
+  height: 100vh;
+} */
 
 .swine-image {
   width: 275px;
@@ -21,4 +21,42 @@
   margin-right: 1rem;
   margin-bottom: 2rem;
   margin-top: 1rem;
+}
+
+.chartBox {
+  width: 100%;
+  padding: 20px 10px 30px 10px;
+  border-radius: 20px;
+  border: solid 1px rgba(54, 162, 235, 1);
+  background: white;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+.chartCard {
+  /* width: 100vw; */
+  /* height: calc(100vh - 40px); */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 2rem;
+}
+
+.chartCard2 {
+  /* width: 100vw; */
+  /* height: calc(100vh - 40px); */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.chartBox2 {
+  width: 100%;
+  min-height: 15rem;
+  /* height: 20rem; */
+  padding: 10px;
+  border-radius: 20px;
+  border: solid 1px rgba(54, 162, 235, 1);
+  background: white;
+  margin-top: 2rem;
 }
