--- a/style.css
+++ b/style.css
@@ -33,8 +33,9 @@
   border-radius: 20px;
   border: solid 1px rgba(54, 162, 235, 1);
   background: white;
-  margin-top: 2rem;
+  /* margin-top: 1rem; */
   margin-bottom: 2rem;
+  height: 300px;
 }
 
 .chartCard {
@@ -58,9 +59,14 @@
   width: 100%;
   min-height: 15rem;
   /* height: 20rem; */
-  padding: 10px;
+  /* padding: 5px; */
   border-radius: 20px;
   border: solid 1px rgba(54, 162, 235, 1);
   background: white;
+  /* margin-top: 2rem; */
+  height: 300px;
+}
+
+#discussionTitle {
   margin-top: 2rem;
 }
